--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\jonatan.alvelid\\AppData\\Local\\Continuum\\anaconda3\\envs\\immunoreceptors\\python.exe"
+    "python.pythonPath": "C:\\Users\\jonatan.alvelid\\AppData\\Local\\Continuum\\anaconda3\\envs\\tempestawin10\\python.exe"
 }
